--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoRelax</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/ab7ec4b661.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="showcase-container">
@@ -24,9 +25,9 @@
         </div>
 
         <div class="social-icons">
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
+            <li><i class="fab fa-facebook-f"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
         </div>
     </section>
 
